# EMS_simulator

./: .dockerignore  .gitignore  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.yml  justfile
.claude/skills/run-app/: SKILL.md  browser-drive.mjs  drive_api.py  smoke.sh  stop.sh
.github/workflows/: ci.yml
.kiro/steering/: ems_simulator_agent_steering_doc.md
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  main.py  observability.py
backend/app/api/: __init__.py  routes.py
backend/app/data/: __init__.py  _credentialed.py  _mimic_format.py  mietic.py  mimic_demo.py  mimic_full.py  registry.py  synthetic.py
backend/app/llm/: __init__.py  feedback.py  patient.py  prompts.py  provider.py
backend/app/models/: __init__.py  analytics.py  cohort.py  encounter.py  ops.py  score.py  triage_case.py
backend/app/scoring/: __init__.py  analytics.py  cohort.py  engine.py  esi_algorithm.py
backend/app/sim/: __init__.py  machine.py
backend/app/store/: __init__.py  db.py
backend/data/sources/mietic/: README.md
backend/data/sources/mimic_demo/: PROVENANCE.json  README.md
backend/data/sources/mimic_full/: README.md
backend/data/sources/synthetic/: README.md
backend/data/sources/synthetic/seed/: abdominal-pain-007.json  anaphylaxis-001.json  ankle-sprain-009.json  asthma-exacerbation-006.json  cardiac-arrest-002.json  laceration-008.json  prescription-refill-010.json  sepsis-005.json  stemi-chest-pain-003.json  stroke-004.json  trap-dka-015.json  trap-ectopic-014.json  trap-nstemi-epigastric-013.json  trap-occult-sepsis-011.json  trap-posterior-stroke-012.json  trap-sah-headache-016.json
backend/scripts/: fetch_mimic_demo.py
backend/tests/: test_analytics.py  test_api.py  test_cohort.py  test_contract.py  test_data.py  test_esi_algorithm.py  test_llm.py  test_observability.py  test_provider_cloud.py  test_scoring.py  test_sim.py  test_store.py
crates/cad-dispatch/: Cargo.toml
crates/cad-dispatch/src/: lib.rs
crates/comms/: Cargo.toml
crates/comms/src/: lib.rs
crates/core-ecs/: Cargo.toml
crates/core-ecs/src/: lib.rs
crates/core-time/: Cargo.toml
crates/core-time/src/: lib.rs
crates/metrics/: Cargo.toml
crates/metrics/src/: lib.rs
crates/pharmacology/: Cargo.toml
crates/pharmacology/src/: lib.rs
crates/physiology/: Cargo.toml
crates/physiology/src/: lib.rs  trace_replay.rs
crates/physiology/tests/: apnea_nrb_replay.rs
crates/procedures/: Cargo.toml
crates/procedures/src/: lib.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: lib.rs
crates/scenario-runtime/: Cargo.toml
crates/scenario-runtime/src/: lib.rs
crates/sim-server/: Cargo.toml
crates/sim-server/src/: main.rs  sim.rs  tui.rs  web.rs  wire.rs
crates/sim-server/tests/: ws_smoke.rs
crates/traffic-ai/: Cargo.toml
crates/traffic-ai/src/: lib.rs
crates/vehicles/: Cargo.toml
crates/vehicles/src/: lib.rs
crates/world/: Cargo.toml
crates/world/src/: lib.rs
data/protocols/: chest-pain-adult.yaml
docs/: ATTRIBUTION.md  AUDIT_FINDINGS.md  DATA_CARD.md  MILESTONES.md  MODULE_INTERFACES.md  SESSION_HANDOFF.md  SESSION_HANDOFF_2026-05-20.md  SESSION_HANDOFF_2026-05-22.md  UX_REFRESH_PLAN.md  build.workflow.js  improvements.workflow.js  restyle.workflow.js
docs/adr/: 0001-engine-and-sim-core-stack.md  0002-phase0-trace-replay-and-web-client.md
docs/superpowers/plans/: 2026-06-01-ui-improvements.md  2026-06-04-visual-uplift.md  2026-06-10-publishable-sprint.md  2026-06-11-data-analytics-ux-sprint.md  2026-06-12-clinical-depth-sprint.md  2026-06-13-instructor-cohort-sprint.md  2026-06-13-ops-hardening-sprint.md
docs/superpowers/specs/: 2026-05-22-apnea-game-overhaul-design.md  2026-06-01-ui-improvements-design.md  2026-06-04-visual-uplift-design.md  2026-06-09-ed-triage-trainer-design.md
engine/web/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
engine/web/public/assets/: NOTICE.md
engine/web/src/: App.tsx  main.tsx  styles.css
engine/web/src/lib/: actions.test.ts  actions.ts  format.ts  (+6 more)
frontend/: .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  index.css  main.tsx  styles.css
frontend/src/api/: client.test.ts  client.ts  contract-schema.test.ts  contract.ts
frontend/src/components/: ChatPanel.test.tsx  ChatPanel.tsx  CohortPanel.test.tsx  CohortPanel.tsx  EsiSelector.test.tsx  EsiSelector.tsx  InterventionPicker.tsx  PatientRail.tsx  ProgressPanel.test.tsx  ProgressPanel.tsx  ScoreCard.test.tsx  ScoreCard.tsx  VitalsGrid.tsx  theme-provider.tsx  theme-toggle.tsx
frontend/src/lib/: cohortId.ts  debrief.test.ts  debrief.ts  traineeId.ts  utils.ts
frontend/src/store/: encounterStore.test.ts  encounterStore.ts
frontend/src/workflow/: CaseLoad.test.tsx  CaseLoad.tsx  EsiAssignment.test.tsx  EsiAssignment.tsx  Feedback.test.tsx  Feedback.tsx  History.test.tsx  History.tsx  Interventions.test.tsx  Interventions.tsx  StepIndicator.tsx  Vitals.test.tsx  Vitals.tsx  WorkflowRouter.test.tsx  WorkflowRouter.tsx  storeContract.ts  testFixtures.ts
shared/schemas/: analytics.schema.json  cohort-analytics.schema.json  encounter.schema.json  score-report.schema.json  triage-case.schema.json
tests/physiology-fixtures/: README.md  apnea-nrb.macos-arm64.csv  apnea-nrb.scenario.json  run-apnea-nrb.sh
(+98 files in other folders)
