[workspace]
resolver = "3"
members = [
    "crates/core-time",
    "crates/core-ecs",
    "crates/physiology",
    "crates/pharmacology",
    "crates/procedures",
    "crates/protocols",
    "crates/scenario-runtime",
    "crates/cad-dispatch",
    "crates/comms",
    "crates/world",
    "crates/vehicles",
    "crates/traffic-ai",
    "crates/metrics",
    "crates/sim-server",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["EMS Simulator contributors"]
repository = "https://example.invalid/EMS_simulator"

[workspace.lints.rust]
# Enforced project-wide. Tightening these will fail CI.
unsafe_code = "deny"
missing_docs = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
# Pedantic-ish but practical. Adjust as the codebase matures.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
todo = "warn"
dbg_macro = "warn"
# Allow some pedantic lints that are noisy in early scaffolding
module_name_repetitions = "allow"
must_use_candidate = "allow"

[workspace.dependencies]
# Internal crates
core-time = { path = "crates/core-time", version = "0.0.1" }
core-ecs = { path = "crates/core-ecs", version = "0.0.1" }
physiology = { path = "crates/physiology", version = "0.0.1" }
pharmacology = { path = "crates/pharmacology", version = "0.0.1" }
procedures = { path = "crates/procedures", version = "0.0.1" }
protocols = { path = "crates/protocols", version = "0.0.1" }
scenario-runtime = { path = "crates/scenario-runtime", version = "0.0.1" }
cad-dispatch = { path = "crates/cad-dispatch", version = "0.0.1" }
comms = { path = "crates/comms", version = "0.0.1" }
world = { path = "crates/world", version = "0.0.1" }
vehicles = { path = "crates/vehicles", version = "0.0.1" }
traffic-ai = { path = "crates/traffic-ai", version = "0.0.1" }
metrics = { path = "crates/metrics", version = "0.0.1" }

# External (intentionally none yet — Phase 0 keeps the scaffold
# dependency-free until ADR-0001 locks the stack)

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"

[profile.dev]
# Faster incremental builds during scaffolding
opt-level = 0
debug = 1
