[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ed-triage-trainer-backend"
version = "0.1.0"
description = "Backend for the ED Triage Trainer: data loaders, LLM patient, encounter state machine, scoring."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "jsonschema>=4.21",
    "httpx>=0.27",
]

[project.optional-dependencies]
# LLM providers are optional extras so the offline/local path needs no cloud SDKs.
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.30"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
# Optional cloud SDKs may be absent in the offline/dev environment.
[[tool.mypy.overrides]]
module = ["anthropic.*", "openai.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
